--- a/.github/workflows/moltenvk.yml
+++ b/.github/workflows/moltenvk.yml
@@ -16,7 +16,7 @@ jobs:
             fail-fast: false
             matrix:
                 env:
-                    - os: macos-latest
+                    - os: macos-13-xlarge
                       name: Darwin
                       nuke_invoke: ./build.sh
                       extras: ""
