--- a/.gitattributes
+++ b/.gitattributes
@@ -53,3 +53,8 @@
 *.7z binary
 *.ttf binary
 *.stout binary
+
+# Verify
+*.verified.txt text eol=lf working-tree-encoding=UTF-8
+*.verified.xml text eol=lf working-tree-encoding=UTF-8
+*.verified.json text eol=lf working-tree-encoding=UTF-8
