--- a/tests/Silk.NET.Core.UnitTests/Silk.NET.Core.UnitTests.csproj
+++ b/tests/Silk.NET.Core.UnitTests/Silk.NET.Core.UnitTests.csproj
@@ -11,10 +11,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-        <PackageReference Include="NUnit.Analyzers" Version="4.1.0" />
+        <PackageReference Include="NUnit.Analyzers" Version="4.1.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="coverlet.collector" Version="6.0.2" />
+        <PackageReference Update="NUnit" Version="4.1.0" />
     </ItemGroup>
 
     <ItemGroup>
