--- a/tests/SilkTouch/Silk.NET.SilkTouch.UnitTests.csproj
+++ b/tests/SilkTouch/Silk.NET.SilkTouch.UnitTests.csproj
@@ -9,4 +9,14 @@
     <ProjectReference Include="..\..\sources\SilkTouch\Silk.NET.SilkTouch.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="NUnit" Version="4.1.0" />
+    <PackageReference Include="Silk.NET.BuildTools" Version="2.20.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="Verify.DiffPlex" Version="2.3.0" />
+    <PackageReference Include="Verify.NUnit" Version="23.6.0" />
+    <None Include="**/*.received.*" />
+    <None Include="**/*.verified.*" />
+  </ItemGroup>
+
 </Project>
