Record group usages too, and maybe fix CI?

--- a/tests/SilkTouch/Silk.NET.SilkTouch.UnitTests.csproj
+++ b/tests/SilkTouch/Silk.NET.SilkTouch.UnitTests.csproj
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <NoWarn>8012;$(NoWarn)</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
