--- a/src/Native/Silk.NET.Assimp.Native/Silk.NET.Assimp.Native.csproj
+++ b/src/Native/Silk.NET.Assimp.Native/Silk.NET.Assimp.Native.csproj
@@ -20,12 +20,15 @@
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <IncludeContentInPack>true</IncludeContentInPack>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
+    <Content Include="runtimes\linux-arm\native\libassimp.so.5" PackagePath="runtimes\linux-arm\native\libassimp.so.5" />
+    <Content Include="runtimes\linux-arm64\native\libassimp.so.5" PackagePath="runtimes\linux-arm64\native\libassimp.so.5" />
     <Content Include="runtimes\linux-x64\native\libassimp.so.5" PackagePath="runtimes\linux-x64\native\libassimp.so.5" />
-    <Content Include="runtimes\osx-x64\native\libassimp.5.dylib" PackagePath="runtimes\osx-x64\native\libassimp.5.dylib" />
     <Content Include="runtimes\osx-arm64\native\libassimp.5.dylib" PackagePath="runtimes\osx-arm64\native\libassimp.5.dylib" />
+    <Content Include="runtimes\osx-x64\native\libassimp.5.dylib" PackagePath="runtimes\osx-x64\native\libassimp.5.dylib" />
+    <Content Include="runtimes\win-arm64\native\Assimp64.dll" PackagePath="runtimes\win-arm64\native\Assimp32.dll" />
     <Content Include="runtimes\win-x64\native\Assimp64.dll" PackagePath="runtimes\win-x64\native\Assimp64.dll" />
     <Content Include="runtimes\win-x86\native\Assimp32.dll" PackagePath="runtimes\win-x86\native\Assimp32.dll" />
   </ItemGroup>
