--- a/src/Native/Silk.NET.GLFW.Native/Silk.NET.GLFW.Native.csproj
+++ b/src/Native/Silk.NET.GLFW.Native/Silk.NET.GLFW.Native.csproj
@@ -23,11 +23,13 @@
 
   <ItemGroup>
     <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
+    <Content Include="runtimes\linux-arm\native\libglfw.so.3" PackagePath="runtimes\linux-arm\native\libglfw.so.3" />
+    <Content Include="runtimes\linux-arm64\native\libglfw.so.3" PackagePath="runtimes\linux-arm64\native\libglfw.so.3" />
     <Content Include="runtimes\linux-x64\native\libglfw.so.3" PackagePath="runtimes\linux-x64\native\libglfw.so.3" />
-    <Content Include="runtimes\osx-x64\native\libglfw.3.dylib" PackagePath="runtimes\osx-x64\native\libglfw.3.dylib" />
     <Content Include="runtimes\osx-arm64\native\libglfw.3.dylib" PackagePath="runtimes\osx-arm64\native\libglfw.3.dylib" />
-    <Content Include="runtimes\win-x64\native\glfw3.dll" PackagePath="runtimes\win-x64\native\glfw3.dll" />
+    <Content Include="runtimes\osx-x64\native\libglfw.3.dylib" PackagePath="runtimes\osx-x64\native\libglfw.3.dylib" />
     <Content Include="runtimes\win-arm64\native\glfw3.dll" PackagePath="runtimes\win-arm64\native\glfw3.dll" />
+    <Content Include="runtimes\win-x64\native\glfw3.dll" PackagePath="runtimes\win-x64\native\glfw3.dll" />
     <Content Include="runtimes\win-x86\native\glfw3.dll" PackagePath="runtimes\win-x86\native\glfw3.dll" />
   </ItemGroup>
 
