--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -21,8 +21,15 @@ jobs:
             name: Linux
             nuke_invoke: ./build.sh
             extras: |
-              sudo apt-get update
-              sudo apt-get install -y xorg-dev libwayland-dev libxkbcommon-dev
+              sudo dpkg --add-architecture arm64
+              sudo dpkg --add-architecture armhf
+              sudo apt update
+              sudo apt install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf
+              sudo apt install -y extra-cmake-modules wayland-protocols
+              for arch in amd64 arm64 armhf; do
+                sudo apt install -y libwayland-dev:$arch libxcursor-dev:$arch libxi-dev:$arch
+                sudo apt install -y libxinerama-dev:$arch libxrandr-dev:$arch libxkbcommon-dev:$arch
+              done
           - os: windows-latest
             name: Windows
             nuke_invoke: ./build.cmd
@@ -41,7 +48,7 @@ jobs:
         run: |
           git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive --depth 0 build/submodules/GLFW
           git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
-          git config --local user.name "The Silk.NET Automaton" 
+          git config --local user.name "The Silk.NET Automaton"
       - name: Extra prerequisites
         run: |
           echo running extras
