--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         dotnet-version: 7.0.102
     - name: Install Workloads
-      run: dotnet workload install android ios maccatalyst maui
+      run: dotnet workload install android ios maccatalyst
     - name: Test
       if: ${{ github.repository != 'dotnet/Silk.NET' || !startsWith(github.ref, 'refs/tags/') }}
       # skip Clean, Restore, and Compile as this will build the affect the whole solution.
