--- a/.github/workflows/public-api.yml
+++ b/.github/workflows/public-api.yml
@@ -42,7 +42,7 @@ jobs:
                     7.0.*
             - name: Install Workloads for Restore
               # TODO: This is slow. Maybe we can make a docker container with this already done?
-              run: dotnet workload install android ios maccatalyst maui
+              run: dotnet workload install android ios maccatalyst
             - name: Ensure Public API Declared
               run: ./build.sh EnsureApiDeclared
               env:
