--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -12,7 +12,8 @@ on:
       - .github/workflows/glfw.yml
 jobs:
   Build:
-    strategy: 
+    if: github.repository == 'dotnet/Silk.NET'
+    strategy:
       fail-fast: false
       matrix:
         env:
