--- a/.github/workflows/shaderc.yml
+++ b/.github/workflows/shaderc.yml
@@ -12,6 +12,7 @@ on:
       - .github/workflows/shaderc.yml
 jobs:
   Build:
+    if: github.repository == 'dotnet/Silk.NET'
     strategy:
       fail-fast: false
       matrix:
