--- a/src/Native/Silk.NET.WebGPU.Native.WGPU/Silk.NET.WebGPU.Native.WGPU.csproj
+++ b/src/Native/Silk.NET.WebGPU.Native.WGPU/Silk.NET.WebGPU.Native.WGPU.csproj
@@ -22,13 +22,15 @@
 
   <ItemGroup>
     <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
-    <Content Include="runtimes\linux-x86\native\libwgpu_native.so" PackagePath="runtimes\linux-x86\native\libwgpu_native.so" />
+    <Content Include="runtimes\linux-arm\native\libwgpu_native.so" PackagePath="runtimes\linux-arm\native\libwgpu_native.so" />
+    <Content Include="runtimes\linux-arm64\native\libwgpu_native.so" PackagePath="runtimes\linux-arm64\native\libwgpu_native.so" />
     <Content Include="runtimes\linux-x64\native\libwgpu_native.so" PackagePath="runtimes\linux-x64\native\libwgpu_native.so" />
-    <Content Include="runtimes\osx-x64\native\libwgpu_native.dylib" PackagePath="runtimes\osx-x64\native\libwgpu_native.dylib" />
+    <Content Include="runtimes\linux-x86\native\libwgpu_native.so" PackagePath="runtimes\linux-x86\native\libwgpu_native.so" />
     <Content Include="runtimes\osx-arm64\native\libwgpu_native.dylib" PackagePath="runtimes\osx-arm64\native\libwgpu_native.dylib" />
-    <Content Include="runtimes\win-x86\native\wgpu_native.dll" PackagePath="runtimes\win-x86\native\wgpu_native.dll" />
-    <Content Include="runtimes\win-x64\native\wgpu_native.dll" PackagePath="runtimes\win-x64\native\wgpu_native.dll" />
+    <Content Include="runtimes\osx-x64\native\libwgpu_native.dylib" PackagePath="runtimes\osx-x64\native\libwgpu_native.dylib" />
     <Content Include="runtimes\win-arm64\native\wgpu_native.dll" PackagePath="runtimes\win-arm64\native\wgpu_native.dll" />
+    <Content Include="runtimes\win-x64\native\wgpu_native.dll" PackagePath="runtimes\win-x64\native\wgpu_native.dll" />
+    <Content Include="runtimes\win-x86\native\wgpu_native.dll" PackagePath="runtimes\win-x86\native\wgpu_native.dll" />
   </ItemGroup>
 
 </Project>
