--- a/src/Native/Silk.NET.OpenAL.Soft.Native/Silk.NET.OpenAL.Soft.Native.csproj
+++ b/src/Native/Silk.NET.OpenAL.Soft.Native/Silk.NET.OpenAL.Soft.Native.csproj
@@ -22,8 +22,12 @@
 
   <ItemGroup>
     <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
+    <Content Include="runtimes\linux-arm\native\libopenal.so" PackagePath="runtimes\linux-arm\native\libopenal.so" />
+    <Content Include="runtimes\linux-arm64\native\libopenal.so" PackagePath="runtimes\linux-arm64\native\libopenal.so" />
     <Content Include="runtimes\linux-x64\native\libopenal.so" PackagePath="runtimes\linux-x64\native\libopenal.so" />
+    <Content Include="runtimes\osx-arm64\native\libopenal.dylib" PackagePath="runtimes\osx-arm64\native\libopenal.dylib" />
     <Content Include="runtimes\osx-x64\native\libopenal.dylib" PackagePath="runtimes\osx-x64\native\libopenal.dylib" />
+    <Content Include="runtimes\win-arm64\native\soft_oal.dll" PackagePath="runtimes\win-arm64\native\soft_oal.dll" />
     <Content Include="runtimes\win-x64\native\soft_oal.dll" PackagePath="runtimes\win-x64\native\soft_oal.dll" />
     <Content Include="runtimes\win-x86\native\soft_oal.dll" PackagePath="runtimes\win-x86\native\soft_oal.dll" />
   </ItemGroup>
