--- a/.github/workflows/vulkan-loader.yml
+++ b/.github/workflows/vulkan-loader.yml
@@ -21,8 +21,14 @@ jobs:
             name: Linux
             nuke_invoke: ./build.sh
             extras: |
-              sudo apt-get update
-              sudo apt-get install -y build-essential libx11-xcb-dev libxkbcommon-dev libwayland-dev libxrandr-dev
+              sudo dpkg --add-architecture arm64
+              sudo dpkg --add-architecture armhf
+              sudo apt update
+              sudo apt install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf
+              for arch in amd64 arm64 armhf; do
+                sudo apt install -y pkg-config:$arch
+                sudo apt install -y libx11-xcb-dev:$arch libxkbcommon-dev:$arch libwayland-dev:$arch libxrandr-dev:$arch
+              done
           - os: windows-latest
             name: Windows
             nuke_invoke: ./build.cmd
@@ -41,7 +47,7 @@ jobs:
         run: |
           git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive --depth 0 build/submodules/Vulkan-Loader
           git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
-          git config --local user.name "The Silk.NET Automaton" 
+          git config --local user.name "The Silk.NET Automaton"
       - name: Extra prerequisites
         run: |
           echo running extras
