Fix filters in workflows to use ** instead of * where appropriate.
The latter only matches up to the first /.

--- a/.github/workflows/assimp.yml
+++ b/.github/workflows/assimp.yml
@@ -2,8 +2,8 @@ name: Assimp
 on:
   push:
     branches-ignore:
-      - "ci/*"
-      - "develop/*"
+      - "ci/**"
+      - "develop/**"
       - "main"
     paths:
       - build/submodules/Assimp
