--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -2,8 +2,8 @@ name: GLFW
 on:
   push:
     branches-ignore:
-      - "ci/*"
-      - "develop/*"
+      - "ci/**"
+      - "develop/**"
       - "main"
     paths:
       - "build/submodules/GLFW"
