--- a/.github/workflows/moltenvk.yml
+++ b/.github/workflows/moltenvk.yml
@@ -2,8 +2,8 @@ name: MoltenVK
 on:
     push:
         branches-ignore:
-            - "ci/*"
-            - "develop/*"
+            - "ci/**"
+            - "develop/**"
             - "main"
         paths:
             - build/submodules/MoltenVK
