--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -2,8 +2,8 @@ name: SDL2
 on:
   push:
     branches-ignore:
-      - "ci/*"
-      - "develop/*"
+      - "ci/**"
+      - "develop/**"
       - "main"
     paths:
       - build/submodules/SDL
