--- a/.github/workflows/wgpu.yml
+++ b/.github/workflows/wgpu.yml
@@ -2,8 +2,8 @@ name: WGPU
 on:
   push:
     branches-ignore:
-      - "ci/*"
-      - "develop/*"
+      - "ci/**"
+      - "develop/**"
       - "main"
     paths:
       - build/submodules/wgpu-native
