--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - 'main'
-      - 'release/*'
+      - 'release/**'
     paths-ignore:
       - 'documentation/**'
     tags:
