--- a/.github/workflows/shaderc.yml
+++ b/.github/workflows/shaderc.yml
@@ -2,8 +2,8 @@ name: Shaderc
 on:
   push:
     branches-ignore:
-      - "ci/*"
-      - "develop/*"
+      - "ci/**"
+      - "develop/**"
       - "main"
     paths:
       - build/submodules/shaderc
