--- a/.github/workflows/swiftshader.yml
+++ b/.github/workflows/swiftshader.yml
@@ -7,8 +7,8 @@ on:
       - build/nuke/Native/SwiftShader.cs
       - .github/workflows/swiftshader.yml
     branches-ignore:
-      - "ci/*"
-      - "develop/*"
+      - "ci/**"
+      - "develop/**"
       - "main"
 jobs:
   Build:
