--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -57,27 +57,26 @@ jobs:
         with:
           command: |
             tee /etc/apt/sources.list << EOF
-            deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu bionic main multiverse restricted universe
-            deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu bionic-backports main multiverse restricted universe
-            deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu bionic-security main multiverse restricted universe
-            deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu bionic-updates main multiverse restricted universe
+            deb [arch=amd64] http://archive.ubuntu.com/ubuntu bionic main multiverse restricted universe
+            deb [arch=amd64] http://archive.ubuntu.com/ubuntu bionic-backports main multiverse restricted universe
+            deb [arch=amd64] http://archive.ubuntu.com/ubuntu bionic-security main multiverse restricted universe
+            deb [arch=amd64] http://archive.ubuntu.com/ubuntu bionic-updates main multiverse restricted universe
             deb [arch=arm64,armhf] http://ports.ubuntu.com bionic main multiverse restricted universe
             deb [arch=arm64,armhf] http://ports.ubuntu.com bionic-backports main multiverse restricted universe
             deb [arch=arm64,armhf] http://ports.ubuntu.com bionic-security main multiverse restricted universe
             deb [arch=arm64,armhf] http://ports.ubuntu.com bionic-updates main multiverse restricted universe
-            deb [arch=amd64,i386] http://security.ubuntu.com/ubuntu bionic main multiverse restricted universe
-            deb [arch=amd64,i386] http://security.ubuntu.com/ubuntu bionic-backports main multiverse restricted universe
-            deb [arch=amd64,i386] http://security.ubuntu.com/ubuntu bionic-security main multiverse restricted universe
-            deb [arch=amd64,i386] http://security.ubuntu.com/ubuntu bionic-updates main multiverse restricted universe
+            deb [arch=amd64] http://security.ubuntu.com/ubuntu bionic main multiverse restricted universe
+            deb [arch=amd64] http://security.ubuntu.com/ubuntu bionic-backports main multiverse restricted universe
+            deb [arch=amd64] http://security.ubuntu.com/ubuntu bionic-security main multiverse restricted universe
+            deb [arch=amd64] http://security.ubuntu.com/ubuntu bionic-updates main multiverse restricted universe
             EOF
             dpkg --add-architecture arm64
             dpkg --add-architecture armhf
-            dpkg --add-architecture i386
             apt update
-            apt install -y gcc gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf gcc-i686-linux-gnu
-            apt install -y g++ g++-aarch64-linux-gnu g++-arm-linux-gnueabihf gcc-i686-linux-gnu
+            apt install -y gcc gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf
+            apt install -y g++ g++-aarch64-linux-gnu g++-arm-linux-gnueabihf
             apt install -y automake build-essential curl git libtool pkg-config python3 wget
-            for arch in amd64 arm64 armhf i386; do
+            for arch in amd64 arm64 armhf; do
               apt install -y libasound2-dev:$arch libpulse-dev:$arch libaudio-dev:$arch libjack-dev:$arch
               apt install -y libsndio-dev:$arch libsamplerate0-dev:$arch libx11-dev:$arch libxext-dev:$arch
               apt install -y libxrandr-dev:$arch libxcursor-dev:$arch libxfixes-dev:$arch libxi-dev:$arch
