--- a/src/Native/Silk.NET.Shaderc.Native/Silk.NET.Shaderc.Native.csproj
+++ b/src/Native/Silk.NET.Shaderc.Native/Silk.NET.Shaderc.Native.csproj
@@ -23,21 +23,17 @@
     <ItemGroup>
         <Content Include="build\net461\$(PackageId).props" PackagePath="build\net461\$(PackageId).props" />
 
-        <Content Include="runtimes\linux-x64\native\libshaderc_shared.so"
-                 PackagePath="runtimes\linux-x64\native\libshaderc_shared.so" />
-
-        <Content Include="runtimes\linux-arm64\native\libshaderc_shared.so"
-                 PackagePath="runtimes\linux-arm64\native\libshaderc_shared.so" />
-
-        <Content Include="runtimes\linux-x86\native\libshaderc_shared.so"
-                 PackagePath="runtimes\linux-x86\native\libshaderc_shared.so" />
+        <Content Include="runtimes\linux-arm\native\libshaderc_shared.so" PackagePath="runtimes\linux-arm\native\libshaderc_shared.so" />
+        <Content Include="runtimes\linux-arm64\native\libshaderc_shared.so" PackagePath="runtimes\linux-arm64\native\libshaderc_shared.so" />
+        <Content Include="runtimes\linux-x64\native\libshaderc_shared.so" PackagePath="runtimes\linux-x64\native\libshaderc_shared.so" />
+        <Content Include="runtimes\linux-x86\native\libshaderc_shared.so" PackagePath="runtimes\linux-x86\native\libshaderc_shared.so" />
 
         <Content Include="runtimes\win-arm64\native\shaderc_shared.dll" PackagePath="runtimes\win-arm64\native\shaderc_shared.dll" />
         <Content Include="runtimes\win-x64\native\shaderc_shared.dll" PackagePath="runtimes\win-x64\native\shaderc_shared.dll" />
         <Content Include="runtimes\win-x86\native\shaderc_shared.dll" PackagePath="runtimes\win-x86\native\shaderc_shared.dll" />
 
-        <Content Include="runtimes\osx-x64\native\libshaderc_shared.dylib" PackagePath="runtimes\osx-x64\native\libshaderc_shared.dylib" />
         <Content Include="runtimes\osx-arm64\native\libshaderc_shared.dylib" PackagePath="runtimes\osx-arm64\native\libshaderc_shared.dylib" />
+        <Content Include="runtimes\osx-x64\native\libshaderc_shared.dylib" PackagePath="runtimes\osx-x64\native\libshaderc_shared.dylib" />
     </ItemGroup>
 
 </Project>
