--- a/src/Native/Silk.NET.SPIRV.Reflect.Native/Silk.NET.SPIRV.Reflect.Native.csproj
+++ b/src/Native/Silk.NET.SPIRV.Reflect.Native/Silk.NET.SPIRV.Reflect.Native.csproj
@@ -23,21 +23,17 @@
     <ItemGroup>
         <Content Include="build\net461\$(PackageId).props" PackagePath="build\net461\$(PackageId).props" />
 
-        <Content Include="runtimes\linux-x64\native\libspirv-reflect.so"
-                 PackagePath="runtimes\linux-x64\native\libspirv-reflect.so" />
-
-        <Content Include="runtimes\linux-arm64\native\libspirv-reflect.so"
-                 PackagePath="runtimes\linux-arm64\native\libspirv-reflect.so" />
-
-        <Content Include="runtimes\linux-x86\native\libspirv-reflect.so"
-                 PackagePath="runtimes\linux-x86\native\libspirv-reflect.so" />
+        <Content Include="runtimes\linux-arm\native\libspirv-reflect.so" PackagePath="runtimes\linux-arm\native\libspirv-reflect.so" />
+        <Content Include="runtimes\linux-arm64\native\libspirv-reflect.so" PackagePath="runtimes\linux-arm64\native\libspirv-reflect.so" />
+        <Content Include="runtimes\linux-x64\native\libspirv-reflect.so" PackagePath="runtimes\linux-x64\native\libspirv-reflect.so" />
+        <Content Include="runtimes\linux-x86\native\libspirv-reflect.so" PackagePath="runtimes\linux-x86\native\libspirv-reflect.so" />
 
         <Content Include="runtimes\win-arm64\native\spirv-reflect.dll" PackagePath="runtimes\win-arm64\native\spirv-reflect.dll" />
         <Content Include="runtimes\win-x64\native\spirv-reflect.dll" PackagePath="runtimes\win-x64\native\spirv-reflect.dll" />
         <Content Include="runtimes\win-x86\native\spirv-reflect.dll" PackagePath="runtimes\win-x86\native\spirv-reflect.dll" />
 
-        <Content Include="runtimes\osx-x64\native\libspirv-reflect.dylib" PackagePath="runtimes\osx-x64\native\libspirv-reflect.dylib" />
         <Content Include="runtimes\osx-arm64\native\libspirv-reflect.dylib" PackagePath="runtimes\osx-arm64\native\libspirv-reflect.dylib" />
+        <Content Include="runtimes\osx-x64\native\libspirv-reflect.dylib" PackagePath="runtimes\osx-x64\native\libspirv-reflect.dylib" />
     </ItemGroup>
 
 </Project>
