--- a/.github/workflows/assimp.yml
+++ b/.github/workflows/assimp.yml
@@ -21,6 +21,9 @@ jobs:
             name: Linux
             nuke_invoke: ./build.sh
             extras: |
+              # We need to adjust APT sources for multiarch. Use the ones corresponding to
+              # Ubuntu 22.04 with appropriate `arch` values. ports.ubuntu.com is required
+              # for armhf and arm64.
               sudo tee /etc/apt/sources.list << EOF
               deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy main universe
               deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy-backports main universe
