--- a/.github/workflows/public-api.yml
+++ b/.github/workflows/public-api.yml
@@ -54,9 +54,8 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   token: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
-            - name: Checkout submodules, configure git
+            - name: Configure git
               run: |
-                  git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive
                   git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
                   git config --local user.name "The Silk.NET Automaton" 
             - name: Cache .tmp, ~/.nuget/packages
