Native: Re-run CMake-based workflows when build/cmake/* changes are pushed.

--- a/.github/workflows/openal-soft.yml
+++ b/.github/workflows/openal-soft.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - build/submodules/openal-soft
+      - "build/cmake/*"
       - build/nuke/Native/Core.cs
       - build/nuke/Native/OpenALSoft.cs
       - .github/workflows/openal-soft.yml
