--- a/.github/workflows/assimp.yml
+++ b/.github/workflows/assimp.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - build/submodules/Assimp
+      - "build/cmake/*"
       - build/nuke/Native/Core.cs
       - build/nuke/Native/Assimp.cs
       - .github/workflows/assimp.yml
