--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - "build/submodules/GLFW"
+      - "build/cmake/*"
       - "build/nuke/Native/Core.cs"
       - "build/nuke/Native/GLFW.cs"
       - .github/workflows/glfw.yml
