--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - build/submodules/SDL
+      - "build/cmake/*"
       - build/nuke/Native/Core.cs
       - build/nuke/Native/SDL2.cs
       - .github/workflows/sdl2.yml
